# rgeoda

./: .NAMESPACE.swp  .Rbuildignore  .gitignore  .gitmodules  404.html  DESCRIPTION  DEVELOPMENT.md  Dockerfile  INDEX  MD5  NAMESPACE  README.md  authors.html  configure  configure.ac  index.html  pkgdown.yml  rgeoda.Rproj  sitemap.xml
Meta/: Rd.rds  hsearch.rds  links.rds  nsInfo.rds  package.rds
R/: AAA.R  RcppExports.R  clustering.R  init.R  lisa.R  read_geoda.R  rgeoda-package.R  rgeoda.R  rgeoda.rdb  rgeoda.rdx  sf_geoda.R  utils.R  weights.R
_src/: Makevars.in  rgeoda.cpp
articles/: index.html  rgeoda_tutorial.html
docs/: 404.html  authors.html  doc_esda.html  doc_intro.html  esda_rgeoda_sf.Rmd  esda_rgeoda_sf.html  index.html  intro_geoda_r.Rmd  intro_geoda_r.html  pkgdown.yml  rgeoda_esda_sf_0_0_3.R  rgeoda_esda_sf_0_0_3.html  rgeoda_esda_sp_0_0_3.R  rgeoda_esda_sp_0_0_3.Rmd  rgeoda_esda_sp_0_0_3.html  rgeoda_tutorial_0_0_4.html  rgeoda_tutorial_0_0_4cn.html  wn1_rgeoda_sp.Rmd  wn1_rgeoda_sp.html
help/: AnIndex  aliases.rds  paths.rds  rgeoda.rdb  rgeoda.rdx
html/: 00Index.html  GeoDa.html  sf_to_geoda.html  sp_to_geoda.html
man/: GeoDa.Rd  LISA-class.Rd  Weight-class.Rd  as.data.frame.geoda.Rd  as.geoda.Rd  as.matrix.Rd  as.matrix.Weight.Rd  azp_greedy.Rd  azp_sa.Rd  azp_tabu.Rd  between_sumofsquare.Rd  create_weights.Rd  demean.Rd  distance_weights.Rd  eb_rates.Rd  flat_clusters.Rd  gda_distance_weights.Rd  gda_kernel_knn_weights.Rd  gda_kernel_weights.Rd  gda_knn_weights.Rd  gda_min_distthreshold.Rd  gda_queen_weights.Rd  gda_rook_weights.Rd  geoda-class.Rd  geoda_open.Rd  geoda_to_sp.Rd  get_kcomponents.Rd  get_neighbors.Rd  get_neighbors_weights.Rd  has_isolates.Rd  hinge15_breaks.Rd  hinge30_breaks.Rd  is_symmetric.Rd  join_count_ratio.Rd  kernel_knn_weights.Rd  kernel_weights.Rd  knn_weights.Rd  lisa_bo.Rd  lisa_clusters.Rd  lisa_colors.Rd  (+63 more)
reference/: LISA-class.html  Weight-class.html  as.data.frame.geoda.html  as.geoda.html  as.matrix.Weight.html  azp_greedy.html  azp_sa.html  azp_tabu.html  create_weights.html  distance_weights.html  eb_rates.html  gda_distance_weights.html  gda_kernel_knn_weights.html  gda_kernel_weights.html  gda_knn_weights.html  gda_min_distthreshold.html  gda_queen_weights.html  gda_rook_weights.html  geoda-class.html  geoda_open.html  get_neighbors.html  get_neighbors_weights.html  has_isolates.html  hinge15_breaks.html  hinge30_breaks.html  index.html  is_symmetric.html  join_count_ratio.html  kernel_knn_weights.html  kernel_weights.html  knn_weights.html  lisa_bo.html  lisa_clusters.html  lisa_colors.html  lisa_fdr.html  lisa_labels.html  lisa_num_nbrs.html  lisa_pvalues.html  lisa_values.html  local_bijoincount.html  (+47 more)
src/: Makevars  Makevars.win  RcppExports.cpp  rcpp_clustering.cpp  rcpp_lisa.cpp  rcpp_rgeoda.cpp  rcpp_utils.cpp  rcpp_weights.cpp  (+1 more)
(+213 files in other folders)
